solving date format error
